[package]
name = "falcotcp"
version = "0.2.1"
edition = "2024"
description = "TCP server/client"
repository = "https://github.com/FeatheredSystems/FalcoTCP"
documentation = "ttd3v.github.io/FalcoTCP/"
license = "Apache-2.0"
build="build.rs"

[build-dependencies]
cc = "1.2.41"

[dev-dependencies]
log = "0.4.28"
rcgen = "0.14.5"
rand = "0.9.2"

[features]
default = ["tokio-runtime","falco-server","falco-client"]
heubias-performance = []
heubias-balance = []
heubias-ratio = []
heuristics = []
complete-compression = ["LZMA","GZIP","LZ4","ZSTD"]
tokio-runtime = ["tokio","async"]
client = []
server = []
encryption = ["aes-gcm"]
falco-client = ["client"]
falco-server = ["server"]
LZMA = ["xz2"]
GZIP = ["flate2"]
LZ4 = ["lz4_flex"]
ZSTD = ["zstd"]
tls = []
async=[]
tokio-tls=["tokio-runtime","tls"]
dynamic-uring-link = []
dev-redundancies = []
native = []
[dependencies]
aes-gcm = {version="=0.10.3",optional=true}
tokio = {version="=1.47.1",features=["full","test-util"], optional=true}
xz2 = {version="=0.1.7", optional=true}
flate2 = {version="=1.1.4", optional=true}
lz4_flex = {version="=0.11.5",optional=true}
zstd = {version="=0.12", optional=true}
